--- a/package.json
+++ b/package.json
@@ -5,9 +5,25 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.6",
+    "axios": "^1.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
+    "typescript": "4.9.5",
+    "web-vitals": "3.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.3",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
@@ -16,22 +32,16 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@types/react-redux": "^7.1.27",
-    "@types/redux-saga": "^0.10.5",
-    "axios": "^1.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "redux-saga": "^1.2.3",
-    "typescript": "^4.9.5",
-    "web-vitals": "3.5.0"
+    "@types/redux-saga": "^0.10.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +60,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://wwheyw2f27.execute-api.ap-southeast-2.amazonaws.com/dev"
+  }
 }
