--- a/package.json
+++ b/package.json
@@ -14,26 +14,29 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
-    "typescript": "4.9.5",
     "web-vitals": "3.5.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/jest-dom": "6.1.3",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.5.1",
-    "@types/jest": "29.5.5",
+    "redux-saga-test-plan": "^4.0.6",
+    "axios-mock-adapter": "^1.22.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/node": "20.7.2",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@types/react-redux": "^7.1.27",
-    "@types/redux-saga": "^0.10.5",
+    "@types/react-test-renderer": "^18.0.3",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3"
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
