--- a/package.json
+++ b/package.json
@@ -43,9 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
-    "format": "prettier --write ."
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src && prettier --check src",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix && prettier --write ."
   },
   "eslintConfig": {
     "extends": [
