--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "web-vitals": "3.5.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "redux-saga-test-plan": "^4.0.6",
-    "axios-mock-adapter": "^1.22.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.5",
     "@types/node": "20.7.2",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@types/react-redux": "^7.1.27",
     "@types/react-test-renderer": "^18.0.3",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -36,7 +36,9 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react-test-renderer": "^18.2.0",
-    "typescript": "4.9.5"
+    "redux-saga-test-plan": "^4.0.6",
+    "ts-jest": "^29.1.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
